third_party/move/move-compiler-v2/tests/lambda/lambda4.lambda.exp
// -- Model dump before bytecode pipeline
module 0x8675309::M {
    public fun fun_result_lambda_not_allowed(): |u64| {
        Abort(1)
    }
    public inline fun macro_result_lambda_not_allowed(): |u64| {
        Abort(1)
    }
} // end 0x8675309::M

// -- Sourcified model before bytecode pipeline
module 0x8675309::M {
    public fun fun_result_lambda_not_allowed(): |u64| {
        abort 1
    }
    public inline fun macro_result_lambda_not_allowed(): |u64| {
        abort 1
    }
}

============ initial bytecode ================

[variant baseline]
public fun M::fun_result_lambda_not_allowed(): |u64| {
     var $t0: |u64|
     var $t1: u64
  0: $t1 := 1
  1: abort($t1)
  2: return $t0
}

============ after LiveVarAnalysisProcessor: ================

[variant baseline]
public fun M::fun_result_lambda_not_allowed(): |u64| {
     var $t0: |u64| [unused]
     var $t1: u64
     # live vars:
  0: $t1 := 1
     # live vars: $t1
  1: abort($t1)
}


Diagnostics:
error: Unexpected type: |u64|
   ┌─ tests/lambda/lambda4.move:89:16
   │
89 │     public fun fun_result_lambda_not_allowed(): |u64| {  // expected lambda not allowed
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
